<resources>
    <string name="app_name">Astro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Ustawienia</string>
    <string name="ok">OK</string>
    <string name="time">Czas</string>
    <string name="azimut">Azymut</string>
    <string name="dusk">Zachód</string>
    <string name="dawn">Wschód</string>
    <string name="sundown">Zamierz Cywilny</string>
    <string name="sunup">Wschód Cywilny</string>
    <string name="now">Nów</string>
    <string name="fullMoon">Pełnia</string>
    <string name="degrees">Stopnie</string>
    <string name="percent">%</string>
    <string name="city">Miasto</string>
    <string name="add">Dodaj</string>

    <string name="moonPhase">Faza księżyca</string>
    <string name="dayOfMontSynod">Dzień Miesiąca Synodycznego</string>
    <string name="days">Dni</string>
    <string name="longitude">Długość geo</string>
    <string name="latitude">Szerokość geo</string>

    <string name="refreshRate">Częstość odświeżania [s]</string>
    <string name="cordsViewDefaultText">podaj bieżącą lokalizacje w opcjach</string>
    <string name="def">Default</string>

    <string name="unknown">Nieznana</string>
    <string name="temp">Temperatura</string>
    <string name="pressure">Ciśnienie</string>
    <string name="additionalInfo">Dodatkowe informacje</string>
    <string name="windSpeed">Prędkość wiatru</string>
    <string name="windDeg">Kierunek wiatru</string>
    <string name="humidity">Wilgotność</string>
    <string name="plus">+</string>
    <string name="pickCity">Wybierz miasto</string>
    <string name="appName">AstroWeather</string>
    <string name="metric">metryczne</string>
    <string name="imperial">imperialne</string>
    <string name="standard">standardowe</string>
    <string name="units">Jednostki</string>
    <string name="warningText">Brak dostępu do internetu, dane mogą być nieaktualne</string>



</resources>