<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sun_fragment"
    android:tag="sun_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SunFragment">

    <ImageView
        android:id="@+id/sunIcon"
        android:layout_width="141dp"
        android:layout_height="183dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/blankTable"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sunTimeColumn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <TextView
                android:id="@+id/sunAzymutColumn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/azimut" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sunDawn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/dawn" />

            <TextView
                android:id="@+id/sunDawnTime"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sunDawnAzymut"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sunDusk"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/dusk" />

            <TextView
                android:id="@+id/sunDuskTime"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sunDuskAzimut"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sunSundown"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/sundown" />

            <TextView
                android:id="@+id/sunSundownTime"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sunSundownAzimut"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sunSunup"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/sunup" />

            <TextView
                android:id="@+id/sunSunupTime"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sunSunupAzimut"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>