<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/unknown"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/longitudeLabel"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/longitude"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/longitude"
        app:layout_constraintTop_toBottomOf="@+id/longitude" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/latitude"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/latitude"
        app:layout_constraintTop_toBottomOf="@+id/latitude" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/time"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/time"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/temp"
        app:layout_constraintStart_toStartOf="@+id/temp"
        app:layout_constraintTop_toBottomOf="@+id/temp" />

    <TextView
        android:id="@+id/longitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/longitude"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/longitude"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/latitudeLabel"
        app:layout_constraintStart_toStartOf="@+id/latitudeLabel"
        app:layout_constraintTop_toBottomOf="@+id/latitudeLabel" />

    <TextView
        android:id="@+id/tempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/timeLabel"
        app:layout_constraintStart_toStartOf="@+id/timeLabel"
        app:layout_constraintTop_toBottomOf="@+id/timeLabel" />

    <TextView
        android:id="@+id/pressureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tempLabel"
        app:layout_constraintStart_toStartOf="@+id/tempLabel"
        app:layout_constraintTop_toBottomOf="@+id/tempLabel" />

    <TextView
        android:id="@+id/latitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/longitudeLabel"
        app:layout_constraintStart_toStartOf="@+id/longitudeLabel"
        app:layout_constraintTop_toBottomOf="@+id/longitudeLabel" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/def"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherDescription" />

    <TextView
        android:id="@+id/weatherDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/unknown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressureLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>